# src/api/app/Http/Controllers/FcmController.php
@@ -3,6 +3,8 @@
 namespace App\Http\Controllers;
 
 use App\Jobs\AddMasUserCommand;
+use App\Models\Game;
+use App\Models\GameUser;
 use App\Models\TokenData;
 use Doctrine\DBAL\Driver\PDOException;
 use Illuminate\Http\Request;
@@ -32,6 +34,11 @@ use Illuminate\Support\Str;
  */
 class FcmController extends Controller
 {
+    const RET_OK              = 0;
+    const BAD_REQUEST         = 1;
+    const UNAUTHORIZED        = 2;
+    const MAINTENANCE         = 3;
+
     private function makeResponse($code, $msg, $data = null)
     {
         $ret = [
@@ -57,8 +64,15 @@ class FcmController extends Controller
         return $this->makeResponse(self::UNAUTHORIZED, 'Unauthorized');
     }
 
+    private function getRemain($game_user)
+    {
+        $game_user['remain_time_quota'] = 2.5;
+        $game_user['remain_money_quota'] = 100;
+        return $game_user;
+    }
+
     /**
-     * @OA\Get(
+     * @OA\Post(
      *     path="/api/get_game",
      *     tags={"GameServer"},
      *     summary="get game configuration",
@@ -91,20 +105,20 @@ class FcmController extends Controller
      */
     public function getGame(Request $request)
     {
-//        $validator = Validator::make($request->all(), [
-//            'WorldID' => 'required|string'
-//        ]);
-//
-//        if ($validator->fails()) {
-//            return $this->makeBadRequestResponse();
-//        }
+        $validator = Validator::make($request->all(), [
+            'uuid' => 'required|string'
+        ]);
 
-        $ret = [];
-        return $this->makeApiResponse($ret);
+        if ($validator->fails()) {
+            return $this->makeBadRequestResponse();
+        }
+
+        $game = Game::where('uuid', $request->uuid)->first();
+        return $this->makeApiResponse($game);
     }
 
     /**
-     * @OA\Get(
+     * @OA\Post(
      *     path="/api/get_user",
      *     tags={"GameClient"},
      *     summary="get user status",
@@ -135,14 +149,30 @@ class FcmController extends Controller
      *    ),
      * )
      */
+    public function getUser(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'access_token' => 'required|string',
+        ]);
 
+        if ($validator->fails()) {
+            return $this->makeBadRequestResponse();
+        }
+
+        $account = Redis::get($request->access_token);
+        $game_user = GameUser::where(['account' => $account])->first();
+        if ($game_user) {
+            return $this->makeApiResponse($this->getRemain($game_user));
+        }
+        return $this->makeBadRequestResponse();
+    }
     /**
      * @OA\Post(
      *     path="/api/login",
      *     tags={"FcmClient"},
      *     summary="user login",
      *     operationId="login",
-     *     @OA\RequestBody(ref="#/components/requestBodies/GetUser"),
+     *     @OA\RequestBody(ref="#/components/requestBodies/Login"),
      *
      *    @OA\Response(
      *      response=200,
@@ -161,18 +191,42 @@ class FcmController extends Controller
      *     ),
      *     @OA\Property(
      *     property="data",
-     *     type="object",
-     *     ref="#/components/schemas/UserStatus",
+     *     type="string",
+     *     description="access token",
      *      )
      *     )
      *    ),
      * )
      */
+    public function login(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'account' => 'required|string',
+            'password' => 'required|string'
+        ]);
+
+        if ($validator->fails()) {
+            return $this->makeBadRequestResponse();
+        }
+
+        $game_user = GameUser::where('account', $request->account)->first();
+        if ($game_user && app('hash')->check($request->password, $game_user->password))
+        {
+            $prev_token = Redis::get($game_user->account);
+            Redis::del($prev_token);
+            $access_token = Str::uuid()->toString();
+            Redis::set($access_token, $game_user->account);
+            Redis::set($game_user->account, $access_token);
+            return $this->makeApiResponse($access_token);
+        }
+        return $this->makeBadRequestResponse();
+    }
+
     /**
      * @OA\Post(
      *     path="/api/logout",
      *     tags={"GameClient"},
-     *     summary="user login",
+     *     summary="user logout",
      *     operationId="logout",
      *     @OA\RequestBody(ref="#/components/requestBodies/GetUser"),
      *
@@ -195,11 +249,26 @@ class FcmController extends Controller
      *    ),
      * )
      */
+    public function logout(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'access_token' => 'required|string',
+        ]);
+
+        if ($validator->fails()) {
+            return $this->makeBadRequestResponse();
+        }
+
+        $account = Redis::get($request->access_token);
+        Redis::del($account);
+        Redis::del($request->access_token);
+        return $this->makeApiResponse([]);
+    }
     /**
      * @OA\Post(
      *     path="/api/register",
      *     tags={"FcmClient"},
-     *     summary="user login",
+     *     summary="user register",
      *     operationId="register_user",
      *     @OA\RequestBody(ref="#/components/requestBodies/RegisterUser"),
      *
@@ -227,4 +296,26 @@ class FcmController extends Controller
      *    ),
      * )
      */
+    public function register(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'account' => 'required|string',
+            'password' => 'required|string',
+            'name' => 'required|string',
+            'id_card' => 'required|string'
+        ]);
+
+        if ($validator->fails()) {
+            return $this->makeBadRequestResponse();
+        }
+
+//        try {
+            $game_user = GameUser::firstOrCreate(['account' => $request->account],
+                array_merge($request->post(), ['game_id' => 1]));
+//        } catch (\Exception $e) {
+//            return $this->makeBadRequestResponse();
+//        }
+        return $this->makeApiResponse($this->getRemain($game_user));
+    }
+
 }
