# src/api/config/database.php
@@ -2,19 +2,22 @@
 
 return [
 
+    'default' => env('DB_CONNECTION', 'mysql'),
+
     'connections' => [
-        'sqlsrv' => [
-            'driver' => 'sqlsrv',
-            'url' => env('MSSQL_DATABASE_URL'),
-            'host' => env('MSSQL_DB_HOST', 'localhost'),
-            'port' => env('MSSQL_DB_PORT', '1433'),
-            'database' => env('MSSQL_DB_DATABASE', 'forge'),
-            'username' => env('MSSQL_DB_USERNAME', 'forge'),
-            'password' => env('MSSQL_DB_PASSWORD', ''),
-            'charset' => 'utf8',
+        'mysql' => [
+            'driver' => 'mysql',
+            'host' => env('DB_HOST', '127.0.0.1'),
+            'port' => env('DB_PORT', '3306'),
+            'database' => env('DB_DATABASE', 'forge'),
+            'username' => env('DB_USERNAME', 'forge'),
+            'password' => env('DB_PASSWORD', ''),
+            'unix_socket' => env('DB_SOCKET', ''),
+            'charset' => 'utf8mb4',
+            'collation' => 'utf8mb4_unicode_ci',
             'prefix' => '',
-            'prefix_indexes' => true,
-            'fetch'       => PDO::FETCH_ASSOC,
+            'strict' => true,
+            'engine' => null,
         ],
     ],
 
